# dcmtk

./: CMakeLists.txt
.github/: README.md
dcmdata/apps/: CMakeLists.txt  dcmdump+.cc  dcmdump+.h  dcmftest+.cc
dcmdata/include/dcmtk/dcmdata/: dcitem.h  dcobject.h  dcsequen.h
dcmdata/libsrc/: CMakeLists.txt  dcitem.cc  dcobject.cc  dcsequen.cc  tweaks.cc
dcmnet/apps/: CMakeLists.txt  storescp+.cc  storescp+.h  storescp.cc
dcmnet/include/: imagedir.h
tweaks/: CMakeLists.txt
tweaks/apps/: CMakeLists.txt  dcmdump+.cc  dcmdump+.h  dcmftest+.cc  storescp+.cc
tweaks/include/: CMakeLists.txt
tweaks/include/dcmtk/tweaks/: dcmdata.h
tweaks/libsrc/: CMakeLists.txt  tweaks.cc
